Shot 12: draft estimates
